--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -87,6 +87,7 @@
     "@types/dragula": "^2.1.34",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.0.0",
@@ -95,5 +96,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "^3.1.6"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test && ng build --aot --source-map=false"
+    }
   }
 }
