Ohager/feature/enhanced ci jobs (#82)
* build matrix for travis

* fixing build script - hopefully

* fixing build script - hopefully no.2

* fixing build script - go!

* fixing build wallet job

* added language env

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,29 @@
 language: node_js
-node_js:
-  - 10
+
+matrix:
+  fast_finish: true
+  include:
+  - name: "Build BurstJS"
+    node_js: "10"
+    env: JOB=build_burstjs
+  - name: "Build Web Wallet"
+    node_js: "10"
+    env: JOB=build_wallet
+
+
 before_install:
-  - cd lib
+  - if [ "$JOB" = "build_burstjs" ]; then cd lib; fi;
+  - if [ "$JOB" = "build_wallet" ]; then cd lib && npm install && npm run bootstrap && cd ../web/angular-wallet; fi;
 install:
-  - npm install
-  - npm run bootstrap
+  - if [ "$JOB" = "build_burstjs" ]; then npm install && npm run bootstrap; fi;
+  - if [ "$JOB" = "build_wallet" ]; then npm install; fi;
+
 cache:
   directories:
     - node_modules
 script:
-  - npm run test:ci
+  - if [ "$JOB" = "build_burstjs" ]; then npm run test:ci; fi;
+  - if [ "$JOB" = "build_wallet" ]; then npm run test && npm run build:ci; fi;
 
 after-success:
-  - bash <(curl -s https://codecov.io/bash)
+  - if [ "$JOB" = "build_burstjs" ]; then bash <(curl -s https://codecov.io/bash); fi;
