--- a/.travis.yml
+++ b/.travis.yml
@@ -5,25 +5,13 @@ matrix:
   include:
   - name: "Build BurstJS"
     node_js: "10"
-    env: JOB=build_burstjs
+    env: JOB=burstjs
   - name: "Build Web Wallet"
     node_js: "10"
-    env: JOB=build_wallet
-
-
-before_install:
-  - if [ "$JOB" = "build_burstjs" ]; then cd lib; fi;
-  - if [ "$JOB" = "build_wallet" ]; then cd lib && npm install && npm run bootstrap && cd ../web/angular-wallet; fi;
-install:
-  - if [ "$JOB" = "build_burstjs" ]; then npm install && npm run bootstrap; fi;
-  - if [ "$JOB" = "build_wallet" ]; then npm install; fi;
+    env: JOB=web
 
 cache:
   directories:
     - node_modules
 script:
-  - if [ "$JOB" = "build_burstjs" ]; then npm run test:ci; fi;
-  - if [ "$JOB" = "build_wallet" ]; then npm run test && npm run build:ci; fi;
-
-after-success:
-  - if [ "$JOB" = "build_burstjs" ]; then bash <(curl -s https://codecov.io/bash); fi;
+  - ./scripts/ci/$JOB.sh
