Redesign of the passive login

--- a/lib/package.json
+++ b/lib/package.json
@@ -56,6 +56,7 @@
     "link": "lerna link && lerna run tsc"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "bn.js": "^4.11.8"
   }
 }
