Typed and fixed some e2e stuff

--- a/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
+++ b/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
@@ -1,4 +1,4 @@
-# This is a template for environment variables needed for E2E test
+cd # This is a template for environment variables needed for E2E test
 # Copy this file as '.env' before editing
 
 # Timeout in seconds before Jest stops a running test
