--- a/lib/package.json
+++ b/lib/package.json
@@ -53,7 +53,7 @@
     "bootstrap": "lerna bootstrap && lerna exec npm install && lerna run tsc",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
     "publish": "lerna run tsc && lerna publish",
-    "link": "lerna link && lerna run tsc"
+    "tsc": "lerna run tsc"
   },
   "dependencies": {
     "axios": "^0.18.0",
