--- a/lib/package.json
+++ b/lib/package.json
@@ -30,10 +30,6 @@
     "babel-preset-env": "^1.7.0",
     "codecov": "^3.1.0",
     "custom-tslint-formatters": "^2.4.0",
-    "esdoc": "^1.1.0",
-    "esdoc-importpath-plugin": "^1.0.2",
-    "esdoc-standard-plugin": "^1.0.0",
-    "esdoc-typescript-plugin": "^1.0.1",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "jsdoc-babel": "^0.5.0",
@@ -43,6 +39,7 @@
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "typedoc": "^0.14.2",
+    "typedoc-plugin-external-module-name": "^2.0.0",
     "typescript": "^3.3.1"
   },
   "scripts": {
@@ -58,7 +55,6 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bn.js": "^4.11.8",
-    "typedoc-plugin-external-module-name": "^2.0.0"
+    "bn.js": "^4.11.8"
   }
 }
