feat(blockchain): add blockchain download

--- a/web/angular-wallet/proxy.config.json
+++ b/web/angular-wallet/proxy.config.json
@@ -1,12 +1,13 @@
 {
   "/burst": {
     "target": {
-      "host": "localhost",
+      "host": "75.100.126.226",
       "protocol": "http:",
-      "port": 8125
+      "port": 6876
     },
     "secure": false,
     "changeOrigin": true,
     "logLevel": "info"
   }
 }
+ 
