added getTime method

--- a/lib/package.json
+++ b/lib/package.json
@@ -51,7 +51,8 @@
     "bootstrap": "lerna bootstrap && lerna exec npm install && lerna run tsc",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
     "publish": "lerna run tsc && lerna publish",
-    "tsc": "lerna run tsc"
+    "tsc": "lerna run tsc",
+    "build": "npm run tsc"
   },
   "dependencies": {
     "axios": "^0.18.0",
