feat(messages): add send message functionality and fee slider

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -67,6 +67,7 @@
     "moment": "2.22.2",
     "ng-mocks": "^7.5.0",
     "ng2-charts": "1.6.0",
+    "ng5-slider": "^1.1.13",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.0.2",
     "ngx-cookie-service": "2.0.0",
