--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/crypto",
-  "version": "0.1.0-rc1",
+  "version": "0.1.0-rc.2",
   "description": "Cryptographic functions for building Burstcoin apps.",
   "contributors": [
     "ohager",
