--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "burstjs",
-  "version": "0.1.0-rc1",
+  "version": "0.1.0-rc.2",
   "description": "Common BURST library",
   "contributors": [
     "ohager",
