--- a/lib/packages/util/package.json
+++ b/lib/packages/util/package.json
@@ -53,8 +53,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "bn.js": "^4.11.8"
-  },
+  "dependencies": {},
   "gitHead": "d270043990cbfc28dd72c675499b4502eb7a1c40"
 }
