fixed failing test 'RequestBurstQrComponent', skipping the other temporarily

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@burstjs",
+  "name": "burstjs",
   "version": "0.1.0-rc.3",
   "description": "BurstCoin Reference Library",
   "contributors": [
