fixed http error

--- a/web/angular-wallet/proxy.config.json
+++ b/web/angular-wallet/proxy.config.json
@@ -8,4 +8,10 @@
     "secure": false,
     "logLevel": "info"
   },
+  "/v1/ticker/burst": {
+    "target": "https://api.coinmarketcap.com",
+    "secure": false,
+    "logLevel": "debug",
+    "headers": {"host":"api.coinmarketcap.com"}
+  }
 }
