fetching cmc data periodcally, and converts balance in btc and usd

--- a/web/angular-wallet/proxy.config.json
+++ b/web/angular-wallet/proxy.config.json
@@ -9,9 +9,13 @@
     "logLevel": "info"
   },
   "/v1/ticker/burst": {
-    "target": "https://api.coinmarketcap.com",
+    "target": "https://api.coinmarketcap.com/",
     "secure": false,
     "logLevel": "debug",
-    "headers": {"host":"api.coinmarketcap.com"}
+    "headers": {
+      "Origin": "https://api.coinmarketcap.com",
+      "Host": "api.coinmarketcap.com",
+      "Content-type": "application/json"
+    }
   }
 }
