--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -83,7 +83,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "^7.2.1",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.9",
     "@angular/language-service": "~7.2.0",
     "@angularclass/hmr": "^2.1.3",
     "@types/dragula": "^2.1.34",
