--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -60,6 +60,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
     "d3": "5.7.0",
+    "d3-shape": "^1.3.4",
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
     "lodash": "4.17.11",
