--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -42,8 +42,10 @@
   "dependencies": {
     "@types/crypto-js": "^3.1.43",
     "@types/node": "^10.12.18",
+    "@types/pako": "^1.0.1",
     "@types/seedrandom": "^2.4.27",
     "crypto-js": "^3.1.9-1",
+    "pako": "^1.0.10",
     "seedrandom": "^2.4.3"
   },
   "husky": {
