using correct keys for encryption on API

--- a/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
+++ b/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
@@ -16,6 +16,12 @@ TEST_PASSPHRASE=
 # A recipient test account
 TEST_RECIPIENT_ID=
 
+# A recipient test account pass
+TEST_RECIPIENT_PASSPHRASE=
+
 # A test transaction
 TEST_TRANSACTION_ID=
+
+# A test encrypted message
+TEST_ENCRYPTED_MESSAGE_TRANSACTION_ID=
 
