--- a/lib/package.json
+++ b/lib/package.json
@@ -47,7 +47,7 @@
     "test:watch": "jest --watch",
     "test:ci": "jest --coverage && codecov",
     "test:e2e": "jest --config jest.config.e2e.js --runInBand --detectOpenHandles --forceExit",
-    "doc": "typedoc --options tsdoc.json",
+    "doc": "typedoc --options tsdoc.json --listInvalidSymbolLinks",
     "bootstrap": "lerna bootstrap && lerna exec npm install && lerna run tsc",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
     "publish": "lerna run tsc && lerna publish",
