--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -73,6 +73,7 @@
     "ngx-color-picker": "7.0.2",
     "ngx-cookie-service": "2.0.0",
     "ngx-mask": "^7.3.3",
+    "particles.js": "^2.0.0",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.15.0",
     "rxjs": "6.3.3",
