--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -24,7 +24,7 @@
     "build": "node ../../scripts/build.js --target desktop",
     "start": "cross-env NODE_ENV=develop && npm run build && electron .",
     "start:fast": "cross-env NODE_ENV=develop && electron .",
-    "pack": "npm run build && electron-packager . @bats/phoenix-desktop-wallet --overwrite --asar --prune=true --out=release-builds",
+    "pack": "npm run build && electron-packager . Phoenix --overwrite --asar --prune=true --out=release-builds",
     "release:all": "npm run pack -- --all",
     "release:linux": "npm run pack -- --platform=linux --arch=x64 --icon=assets/images/png/1024x1024.png",
     "release:win32": "npm run pack -- --platform=win32 --arch=x64 --icon=assets/images/win/128x128_icon.ico",
