--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -78,6 +78,7 @@
     "prismjs": "1.15.0",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
+    "semver": "^6.0.0",
     "time-ago-pipe": "^1.3.2",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.26"
