--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phoenix-angular-web-wallet",
-  "version": "0.0.1",
+  "version": "1.0.0-beta",
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
