--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/core",
-  "version": "0.1.0-rc.3.2",
+  "version": "0.1.0",
   "description": "Burst-related functions and models for building Burstcoin applications.",
   "contributors": [
     "ohager",
