--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/http",
-  "version": "0.1.0-rc.3.2",
+  "version": "0.1.1",
   "description": "Send commands to BURST over HTTP",
   "contributors": [
     "ohager",
