--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -2,7 +2,7 @@
   "name": "phoenix",
   "author": {
     "name": "Burst Apps Team (BAT)",
-    "email": "contact@burstcoin.org"
+    "email": "contact@burst-coin.org"
   },
   "productName": "Phoenix BURST Wallet",
   "version": "1.0.0-beta.2",
