--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
     node_js: "10"
     env: JOB=web
   - name: "Build Desktop Wallet"
-    if: branch = test-desktop-deploy
+    if: branch=test-desktop-deploy
     os: linux
     node_js: "10":
     services:
