minor docker and packaging adjustments

--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -70,9 +70,9 @@
     "linux": {
       "target": [
         "AppImage",
-        "snap",
         "deb",
-        "rpm"
+        "rpm",
+        "tar.gz"
       ],
       "publish": [
         "github"
