--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,19 @@
 language: node_js
-matrix:
-  fast_finish: true
-  include:
-  - name: Build BurstJS
-    os: linux
-    node_js: '10'
-    env: JOB=burstjs
-  - name: Build Web Wallet
-    os: linux
-    node_js: '10'
-    env: JOB=web
-  - name: Build Desktop Wallet
-    if: branch=~ /^force-deploy-/
-    os: osx
-    node_js: '10'
-    env: JOB=desktop-osx
 
-before_cache:
-- rm -rf $HOME/.cache/electron-builder/wine
 cache:
   directories:
-  - node_modules
-  - "$HOME/.cache/electron"
-  - "$HOME/.cache/electron-builder"
-script:
-- "./scripts/ci/$JOB.sh"
+    - node_modules
+    - "$HOME/.cache/electron"
+    - "$HOME/.cache/electron-builder"
+
+jobs:
+  include:
+    - stage: test
+      os: linux
+      node_js: '10'
+      script: './scripts/ci/test-burstjs.sh'
+    - # parallel run
+      script: './scripts/ci/test-ng.sh'
+    - # parallel run
+      script: './scripts/ci/build-ng.sh'
+
