--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,20 @@ cache:
 
 jobs:
   include:
-    - stage: build
-      os: linux
-      name: "Build Angular App"
-      script: './scripts/ci/build-ng.sh'
-    - # parallel run
-      name: "Build Electron App"
-      script: './scripts/ci/build-electron.sh'
-    - stage: test
-      os: linux
-      name: "Run BurstJS Tests"
-      script: './scripts/ci/test-burstjs.sh'
-    - # parallel run
-      name: "Run Angular Tests"
-      script: './scripts/ci/test-ng.sh'
+#    - stage: build
+#      os: linux
+#      name: "Build Angular App"
+#      script: './scripts/ci/build-ng.sh'
+#    - # parallel run
+#      name: "Build Electron App"
+#      script: './scripts/ci/build-electron.sh'
+#    - stage: test
+#      os: linux
+#      name: "Run BurstJS Tests"
+#      script: './scripts/ci/test-burstjs.sh'
+#    - # parallel run
+#      name: "Run Angular Tests"
+#      script: './scripts/ci/test-ng.sh'
     - stage: deploy
       os: osx
       name: "Build and Deploy Desktop App"
@@ -32,4 +32,4 @@ stages:
   - build
   - test
   - name: deploy
-    if: branch=/^force-deploy/
+    if: branch=~/^force-deploy/
