--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,10 @@ jobs:
       os: osx
       name: "Forced Build and Deploy Desktop App"
       script: './scripts/ci/release-desktop.sh --force'
+    - stage: nightly-release
+      os: osx
+      name: "Nightly Release of Desktop App"
+      script: './scripts/ci/nightly-release.sh'
 
 stages:
   - build
@@ -39,3 +43,9 @@ stages:
     if: branch=~/^v\d+\.\d+\.\d+/
   - name: deploy-force
     if: branch=~/^force-deploy/
+  - name: nightly-release
+    if: branch=~/^force-deploy/
+
+branches:
+  except:
+    - nightly-desktop
