--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -5,7 +5,7 @@
     "email": "contact@burst-coin.org"
   },
   "productName": "Phoenix BURST Wallet",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-test.1",
   "contributors": [
     "ohager",
     "blankey1337"
@@ -34,8 +34,7 @@
     "release:linux": "npm run pack -- -l",
     "release:win32": "npm run pack -- -w",
     "release:macos": "npm run pack -- -m",
-    "postinstall": "electron-builder install-app-deps",
-    "release":"build"
+    "postinstall": "electron-builder install-app-deps"
   },
   "devDependencies": {
     "ajv": "^6.10.0",
@@ -59,7 +58,7 @@
     ],
     "icon": "./assets/images/png/512x512.png",
     "mac": {
-      "target" : [
+      "target": [
         "zip",
         "tar.gz"
       ],
@@ -85,7 +84,6 @@
         "nsis",
         "portable"
       ],
-
       "publish": [
         "github"
       ]
