--- a/.travis.yml
+++ b/.travis.yml
@@ -33,22 +33,22 @@ jobs:
 #    - stage: deploy
 #      name: "Build and Deploy Desktop App"
 #      script: './scripts/ci/release-desktop.sh'
-#    - stage: deploy-force
-#      name: "Forced Build and Deploy Desktop App"
-#      script: './scripts/ci/release-desktop.sh --force'
-    - stage: nightly-release
-      name: "Nightly Release of Desktop App"
-      script: './scripts/ci/nightly-desktop.sh'
+    - stage: deploy-force
+      name: "Forced Build and Deploy Desktop App"
+      script: './scripts/ci/release-desktop.sh --force'
+#    - stage: nightly-release
+#      name: "Nightly Release of Desktop App"
+#      script: './scripts/ci/nightly-desktop.sh'
 
 stages:
   - build
   - test
   - name: deploy
     if: branch=~/^v\d+\.\d+\.\d+/
-#  - name: deploy-force
-#    if: branch=~/^force-deploy/
-  - name: nightly-release
-    if: (branch=/^force-deploy/) AND (tag != nightly)
+  - name: deploy-force
+    if: branch=~/^force-deploy/
+#  - name: nightly-release
+#    if: (branch=/^force-deploy/) AND (tag != nightly)
 
 branches:
   except:
