--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,11 +28,10 @@
     "tsc": "tsc --init --pretty --jsx react"
   },
   "dependencies": {
-    "@burstjs/core": "^0.1.0-rc.3",
-    "@burstjs/crypto": "^0.1.0-rc.3",
-    "@burstjs/http": "^0.1.0-rc.3",
-    "@burstjs/util": "^0.1.0-rc.3",
-    "@types/react-native-touch-id": "^4.0.1",
+    "@burstjs/core": "^0.1.1",
+    "@burstjs/crypto": "^0.1.1",
+    "@burstjs/http": "^0.1.1",
+    "@burstjs/util": "^0.1.1",
     "axios": "^0.18.0",
     "i18n-js": "^3.1.0",
     "lodash": "^4.17.11",
@@ -58,6 +57,8 @@
     "@types/lodash": "^4.14.120",
     "@types/react": "^16.7.20",
     "@types/react-native": "^0.57.29",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-touch-id": "^4.0.1",
     "@types/react-navigation": "^3.0.1",
     "@types/react-redux": "^7.0.0",
     "@types/react-test-renderer": "^16.0.3",
@@ -65,6 +66,7 @@
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-addons-test-utils": "^15.6.2",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.6.3",
     "sort-json": "^2.0.0",
     "ts-jest": "^23.10.5",
