--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 os: osx
 language: node_js
 node_js: '10'
-
-before_cache:
-  - brew cleanup
+addons:
+  homebrew:
+    packages:
+      - rpm
 
 cache:
   directories:
     - node_modules
     - "$HOME/.cache/electron"
     - "$HOME/.cache/electron-builder"
-    - "$HOME/Library/Caches/Homebrew"
 
 jobs:
   include:
@@ -34,7 +34,28 @@ jobs:
 #      script: './scripts/ci/release-desktop.sh --force'
     - stage: nightly-release
       name: "Nightly Release of Desktop App"
+      before_install: echo "Before install"
+      install: echo "install"
       script: './scripts/ci/nightly-desktop.sh'
+      before_deploy:
+        # Set up git user name and tag this commit
+        - git config --local user.name $GH_NAME
+        - git config --local user.email $GH_EMAIL
+        - export TRAVIS_TAG=nightly
+        - git tag $TRAVIS_TAG --force
+      deploy:
+        provider: releases
+        api_key: $GH_TOKEN
+        file_glob: true
+        file:
+          - /desktop/wallet/release-builds/latest*
+          - /desktop/wallet/release-builds/Phoenix*
+          - /desktop/wallet/release-builds/phoenix*
+        skip_cleanup: true
+        overwrite: true
+#        on:
+#          branch: nig
+#          condition: $TRAVIS_TAG=nightly
 
 stages:
   - build
