--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
         skip_cleanup: true
         overwrite: true
         on:
-          branch: develop
+          branch: nightly
           condition: $TRAVIS_TAG=nightly
 
 stages:
